--- a/www.nass.gov.ng/fe73fac0099e810bc872ec11be2f117c155d7beb.yml
+++ b/www.nass.gov.ng/fe73fac0099e810bc872ec11be2f117c155d7beb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 04:06:12 GMT
+    - Sun, 19 Aug 2018 14:36:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DCkjRc-TUNzzpEGksiQ-%2C2; path=/
+    - PHPSESSID=1YIjeR0pYSnY0gNOONt202; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 04:06:12 GMT
+recorded_at: Sun, 19 Aug 2018 14:36:30 GMT
