--- a/www.nass.gov.ng/c54ac3b18c86fbcdd5fac65df595a2e4a10c9f8f.yml
+++ b/www.nass.gov.ng/c54ac3b18c86fbcdd5fac65df595a2e4a10c9f8f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 04:10:45 GMT
+    - Sun, 19 Aug 2018 14:41:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g6-SfXro%2CO5D1RWJyOwf62; path=/
+    - PHPSESSID=28bddb2xMM-ZV2kX5-7hF0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 04:10:45 GMT
+recorded_at: Sun, 19 Aug 2018 14:41:02 GMT
