--- a/www.nass.gov.ng/1b909165717c7711dae2640e5219a6395d687278.yml
+++ b/www.nass.gov.ng/1b909165717c7711dae2640e5219a6395d687278.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 04:38:56 GMT
+    - Sun, 19 Aug 2018 15:11:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FpfLkP83mTv5wBxzqVRpQ3; path=/
+    - PHPSESSID=erdDb%2CLDf9na6JmrYRJxQ1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 04:38:56 GMT
+recorded_at: Sun, 19 Aug 2018 15:11:07 GMT
