--- a/www.nass.gov.ng/0a3188b0496d108ddcf3a2a9523440afc53f7a27.yml
+++ b/www.nass.gov.ng/0a3188b0496d108ddcf3a2a9523440afc53f7a27.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 04:39:49 GMT
+    - Sun, 19 Aug 2018 15:11:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EPccaBvsZLWxnRbH78Khj3; path=/
+    - PHPSESSID=uvYCraqw%2C9wfnWMZW8Jzy2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 04:39:49 GMT
+recorded_at: Sun, 19 Aug 2018 15:11:56 GMT
