--- a/www.nass.gov.ng/efaf8b3b5225139dc28266021cab8894ef651080.yml
+++ b/www.nass.gov.ng/efaf8b3b5225139dc28266021cab8894ef651080.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 07:46:39 GMT
+    - Mon, 20 Aug 2018 22:10:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bflOYiWlgGrQgQrHCUDkd1; path=/
+    - PHPSESSID=Esy5xQwEsedaS%2CCQj1oSf0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 07:46:39 GMT
+recorded_at: Mon, 20 Aug 2018 22:10:53 GMT
