--- a/www.nass.gov.ng/02417b3ce5d2d8778ffc6042a1be6a87e91bd6a7.yml
+++ b/www.nass.gov.ng/02417b3ce5d2d8778ffc6042a1be6a87e91bd6a7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 07:50:59 GMT
+    - Mon, 20 Aug 2018 22:16:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NIX9rLO3bILXb9Lh92na%2C1; path=/
+    - PHPSESSID=4G%2CvPvcTyVqYDDf5t5lFS3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 07:50:59 GMT
+recorded_at: Mon, 20 Aug 2018 22:16:52 GMT
