--- a/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
+++ b/www.nass.gov.ng/29d43b5bc0ecc4a7b466cadf645b35e7ef7153b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:40:19 GMT
+    - Tue, 21 Aug 2018 02:25:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XUZThntd1938UTjXSWfHs0; path=/
+    - PHPSESSID=t5YRq%2CAzun0lP2YxALJpC3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:40:19 GMT
+recorded_at: Tue, 21 Aug 2018 02:25:21 GMT
