--- a/www.nass.gov.ng/93b6c65363f8309a306a5e422bda9d70074a53a1.yml
+++ b/www.nass.gov.ng/93b6c65363f8309a306a5e422bda9d70074a53a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 11:41:08 GMT
+    - Tue, 21 Aug 2018 02:26:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eA%2CsLEjxTFwtRCqTGK8Aj3; path=/
+    - PHPSESSID=oUxII9LN4gYNRcsODNoOo2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 11:41:09 GMT
+recorded_at: Tue, 21 Aug 2018 02:26:19 GMT
