--- a/www.nass.gov.ng/77cba26367499c1beae4b467880b2607059c6426.yml
+++ b/www.nass.gov.ng/77cba26367499c1beae4b467880b2607059c6426.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 12:02:28 GMT
+    - Tue, 21 Aug 2018 02:47:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2r2LAZz2T4V8jJoOLaGKF3; path=/
+    - PHPSESSID=rlcwmg2OYnwwVdaR0%2CD6A2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 12:02:29 GMT
+recorded_at: Tue, 21 Aug 2018 02:47:51 GMT
