--- a/www.nass.gov.ng/0a581cbd2e00adf943da88bf4abec6b8a66698e9.yml
+++ b/www.nass.gov.ng/0a581cbd2e00adf943da88bf4abec6b8a66698e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 12:04:38 GMT
+    - Tue, 21 Aug 2018 02:50:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Br-AqfNRlZ1zvVrc68kCg0; path=/
+    - PHPSESSID=5aVttj7uXSomOZ3nN%2CKnF3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 12:04:38 GMT
+recorded_at: Tue, 21 Aug 2018 02:50:28 GMT
