--- a/www.nass.gov.ng/84ee167bef250ec7c70ffdc4596588c55fafb916.yml
+++ b/www.nass.gov.ng/84ee167bef250ec7c70ffdc4596588c55fafb916.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 12:06:09 GMT
+    - Tue, 21 Aug 2018 02:52:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ALA7yWuKvDw3IFiNqx-ri3; path=/
+    - PHPSESSID=flNf9gs%2CRGAag-oxdQb6J3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 12:06:10 GMT
+recorded_at: Tue, 21 Aug 2018 02:52:50 GMT
